--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
     </header>
     <main>
        <div id="container_adjust-main">
-            
             <section id="promocionais">
-                <div>
-                <img src="amortnakata.png" class="promoimg">
-                <p class="obs">Amortecedor Dianteiro Corsa R$390,00</p>
+                <div class="container__promocionais">
+                    <img src="amortnakata.png" class="promoimg">
+                    <div class="content_price">
+                        <p class="obs">Amortecedor Dianteiro Corsa</p>
+                        <i>R$390,00</i>
+                        <span><i class="fa-credit-card"></i>
+                            10x R$ 39,00 no cartão
+                        </span>
+                    </div>
                 </div>
-                <div>
+                <div class="container__promocionais">
                 <img src="kitembfiesta.png" class="promoimg">
                 <p class="obs">Kit Embreagem Completo Fiesta 02/... R$590,00</p>
                 </div>
-                <div>
+                <div class="container__promocionais">
                 <img src="pastilha.png" class="promoimg">
                 <p class="obs">Pastilha Freio UP! R$89,00</p>
                 </div>
