--- a/index.html
+++ b/index.html
@@ -32,20 +32,34 @@
                 <div class="container__promocionais">
                     <img src="amortnakata.png" class="promoimg">
                     <div class="content_price">
-                        <p class="obs">Amortecedor Dianteiro Corsa</p>
-                        <i>R$390,00</i>
-                        <span><i class="fa-credit-card"></i>
-                            10x R$ 39,00 no cartão
+                        <span class="price_types">Amortecedor Dianteiro</span>
+                        <span class="price_types">Corsa classic 1996/2014</span>
+                        <span class="price_types">R$390.00</span>
+                        <span class="price_types"><i class="fa-credit-card"></i>
+                            10x R$ 39.00 no cartão
                         </span>
                     </div>
                 </div>
                 <div class="container__promocionais">
-                <img src="kitembfiesta.png" class="promoimg">
-                <p class="obs">Kit Embreagem Completo Fiesta 02/... R$590,00</p>
+                     <img src="kitembfiesta.png" class="promoimg">
+                     <div class="content_price">
+                        <span class="price_types">Kit de Embreagem</span>
+                        <span class="price_types">Fiesta zetec rocam 02/2014 </span>
+                        <span class="price_types">R$624.00</span>
+                        <span class="price_types"><i class="fa-credit-card"></i>
+                            10x R$ 62.40 no cartão
+                        </span>
+                    </div>
                 </div>
                 <div class="container__promocionais">
                 <img src="pastilha.png" class="promoimg">
-                <p class="obs">Pastilha Freio UP! R$89,00</p>
+                <div class="content_price">
+                    <span class="price_types">Pastilha de freio</span>
+                    <span class="price_types">VW UP! 2014/... </span>
+                    <span class="price_types">R$89.00</span>
+                    <span class="price_types"><i class="fa-credit-card"></i>
+                        10x R$ 8.90 no cartão
+                    </span>
                 </div>
 
             </section>
