--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 <body>
 
     <header>
-        <div>
-            <img src="cabecalhopecas.png" id="cabecalho-pecas">
-            <label class="nomelogo"><a href="index.html"> Auto Peças</a></label>
-            <nav>
-                <ul class="navegacao">
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="Serviços.html">Serviços</a></li>
-                    <li><a href="Contato.html">Contato</a></li>
-                </ul>
-            </nav>
-            <h1 class="promo">Promoções</h1>
+        <div class="container-header">
+            <div class="container_text-logo">
+                <span class="name-logo_adjust">
+                    <h1 class="name-logo">Auto Car</h1>
+                    <h3 class="subname-logo">Auto center</h3>
+                </span>
+                <h2 class="logo-image"></h2>
+            </div>
+            <div class="container-nav">
+                <nav class="navigation-itens">
+                    <ul>
+                        <li class="nav_list"><a href="index.html">Principal</a></li>
+                        <li class="nav_list"><a href="quemsomos.html">Quem Somos</a></li>
+                        <li class="nav_list"><a href="produtos.html">Produtos</a></li>
+                        <li class="nav_list"><a href="servicos.html">Serviços</a></li>
+                        <li class="nav_list"><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
