--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <h1 class="name-logo">Auto Car</h1>
                     <h3 class="subname-logo">Auto center</h3>
                 </span>
+                <span class="telefones">
+                    <h6 class="logo__telefone-texto">Tel: (51)3333-3333   </h6>
+                    <h3 class="logo_telefone">Whats: (51)99999-9999</h3>                  
+                </span>
                 <h2 class="logo-image"></h2>
             </div>
             <div class="container-nav">
@@ -74,16 +78,12 @@
         </div>
     </main>
     <footer>    
-        <section class="layrodape">
-            <h1 class="msgrodape">Os melhores preços com as melhores marcas voce só encontra aqui!</h1>
-            <ul class="telefones">
-                <li class="listarodape">(51)3333-3333</li>
-                <li class="listarodape">(51)99999-9999</li>
-                <li class="listarodape">Av. Central 520 Porto Alegre/RS</li>
-            </ul>
-            <p class="copyright">&copy;Todos os direitos reservados</p>
-            <h2 class="dev">Pagina criada por Altair Junior.</h2>
-        </section>
+      <div class="container_carrousel">
+
+      </div>
+       <div class="rodape">
+
+       </div>
     </footer>   
 
 </body>
