--- a/Assets/img/index.html
+++ b/Assets/img/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/reset.css">
-    <link rel="stylesheet" href="./Assets/css/style.css">
-    <link rel="stylesheet" href="./Assets/css/rodape.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@200&family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Courgette&family=Lobster&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <title>Auto Center</title>
+    <title>Auto Peças</title>
 </head>
 
 <body>
@@ -44,7 +42,7 @@
        <div id="container_adjust-main">
             <section id="promocionais">
                 <div class="container__promocionais">
-                    <img src="./Assets/img/amortnakata.png" class="promoimg">
+                    <img src="amortnakata.png" class="promoimg">
                     <div class="content_price">
                         <span class="price_types">Amortecedor Dianteiro</span>
                         <span class="price_types">Corsa classic 1996/2014</span>
@@ -55,7 +53,7 @@
                     </div>
                 </div>
                 <div class="container__promocionais">
-                     <img src="./Assets/img/kitembfiesta.png" class="promoimg">
+                     <img src="kitembfiesta.png" class="promoimg">
                      <div class="content_price">
                         <span class="price_types">Kit de Embreagem</span>
                         <span class="price_types">Fiesta zetec rocam 02/2014 </span>
@@ -66,7 +64,7 @@
                     </div>
                 </div>
                 <div class="container__promocionais">
-                <img src="./Assets/img/pastilha.png" class="promoimg">
+                <img src="pastilha.png" class="promoimg">
                 <div class="content_price">
                     <span class="price_types">Pastilha de freio</span>
                     <span class="price_types">VW UP! 2014/... </span>
@@ -90,22 +88,13 @@
             <i></i>
         </span>
       </div>
-      <div class="rodape">
+       <div class="rodape">
             <span>
                 <h1 class="textoPagamento">Formas de pagamento</h1>
                 <i class="pagamento"></i>
             </span>
-            <span>
-                <h6 class="logo__telefone-rodape">Tel: (51)3333-3333   </h6>
-                <h3 class="logo_telefone-rodape">Whats: (51)99999-9999</h3>
-                <h1>Atendimento de segunda a sexta</h1>
-                <h2>8h ás 18h</h2>
-            </span>
-            <span>
-                <h1>Trabalhe conosco</h1>
-                <h2>Quem somos</h2>
-            </span>
-      </div>
+            
+       </div>
     </footer>   
 
 </body>
