--- a/index.html
+++ b/index.html
@@ -81,34 +81,34 @@
     </main>
     <footer>    
       <div class="container_carrousel">
-        <span>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
+        <span id="img">
+            <img  class="img__fit" id="imgx" src="./Assets/img/logobosch.png" alt="">
+            <img class="img__fit" id="imgx" src="./Assets/img/logoCofap.png" alt="">
+            <img class="img__fit" id="imgx" src="./Assets/img/logomte.png" alt="">
+            <img class="img__fit" id="imgx" src="./Assets/img/logoNGK.png" alt="">
+            <img class="img__fit" id="imgx" src="./Assets/img/logoVisconde.png" alt="">
+            <img class="img__fit" id="imgx" src="./Assets/img/sampellogo.png" alt="">
         </span>
       </div>
       <div class="rodape">
-            <span>
+            <span class="pagamento">
                 <h1 class="textoPagamento">Formas de pagamento</h1>
-                <i class="pagamento"></i>
+                <i class="pagamentosimg"></i>
             </span>
-            <span>
+            <span class="telefone_rodape">
                 <h6 class="logo__telefone-rodape">Tel: (51)3333-3333   </h6>
-                <h3 class="logo_telefone-rodape">Whats: (51)99999-9999</h3>
-                <h1>Atendimento de segunda a sexta</h1>
-                <h2>8h ás 18h</h2>
+                <h3 class="logo__telefone-rodape">Whats: (51)99999-9999</h3>
+                <h1 class="logo__telefone-rodape">Atendimento de segunda a sexta</h1>
+                <h2 class="logo__telefone-rodape">8h ás 18h</h2>
             </span>
-            <span>
-                <h1>Trabalhe conosco</h1>
-                <h2>Quem somos</h2>
+            <span class="info">
+                <h1 class="rodape_info"><a href="trabalheConosco.html">Trabalhe conosco</a></h1>
+                <h2 class="rodape_info"><a href="quemsomos.html">Quem somos</a></h2>
             </span>
       </div>
     </footer>   
 
 </body>
-
+ <script src="./Assets/javaScript/carrosel.js"></script>
 
 </html>
