--- a/quemsomos.html
+++ b/quemsomos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Assets/css/reset.css">
     <link rel="stylesheet" href="./Assets/css/style.css">
     <link rel="stylesheet" href="./Assets/css/rodape.css">
+    <link rel="stylesheet" href="Assets/css/quemsomos.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@200&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Courgette&family=Lobster&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Auto Center</title>
@@ -41,7 +42,33 @@
         </div>
     </header>
     <main>
-
+        <div id="sobre">
+            <div class="sobre__img">
+                <img class="sobre__img-adj" src="Assets/img/quemsomosfoto.png" alt="fotoauto">
+            </div>
+            <div class="sobre__txt">
+                <p>Atuamos há quase 30 anos no mercado de peças e acessórios para veículos, sendo referência para aqueles que buscam além de economia e eficiência</p>
+                    <p>a parceria de pessoas especializadas em peças automotivas Porto Alegre - RS.</p>
+                    <p>Nosso horário de funcionamento é de segunda à sexta, das 8h às 18h.</p>
+                    <p>Em 2014 re-posicionamos a empresa e começamos a oferecer serviços de oficina mecânica,</p>
+                    <p>para que pudéssemos auxiliar nossos cliente desde a venda da peça correta até a correta utilização no veículo</p>
+                    <p>Todos produtos comercializados por nós são provenientes dos fabricantes originais</p>
+                    <p>e distribuidores autorizados, garantindo a originalidade das peças e certificados de garantia.</p>
+                    <p>A paixão pelos automóveis nos motiva diariamente a procurar novas soluções</p>
+                    <p>e formas de atender todos àqueles que buscam bons companheiros na hora de arrumar ou reformar seu carro.</p>
+                    <p>Missão</p>
+                    <p>Satisfazer e facilitar a vida nossos clientes através da comercialização de peças e acessórios automotivos de qualidade e com preços justos</p>
+                    <p>Visão </p>
+                    <p>Ser sinônimo de qualidade e eficiência no que diz respeito à comercialização de peças e acessórios automotivos,
+                    <p>sendo reconhecida pela ética, honestidade e compromisso com - e por-  nossos cliente e fornecedores.
+                    <p>Valores</p>
+                    <p>Ética</p>
+                    <p>Honestidade</p>
+                    <p>Compromisso</p>
+                    <p>Empatia</p>
+                    <p>Companheirismo</p>
+            </div>
+        </div>
     </main>
     <footer>    
         <div class="container_carrousel">
