--- a/produtos.html
+++ b/produtos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./Assets/css/reset.css">
     <link rel="stylesheet" href="./Assets/css/style.css">
     <link rel="stylesheet" href="./Assets/css/rodape.css">
+    <link rel="stylesheet" href="Assets/css/produtos.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@200&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Courgette&family=Lobster&family=Roboto&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Auto Center</title>
@@ -41,32 +42,19 @@
         </div>
     </header>
         <main>
-            <section class="sec1">
-                <ul class="itenscore">
-                    <li class="listaitens">Suspensão
-                        <ul>
-                            <li class="listaninhada">Amortecedor</li>
-                        </ul>
-                    </li>
-                    <li class="listaitens">Freios</li>
-                    <li class="listaitens">Motor</li>
-                    <li class="listaitens">Injeção</li>
-                    <li class="listaitens">Eletrica</li>
-                    <li class="listaitens">Correias</li>
-                    <li class="listaitens">Acessorios</li>
-                </ul>
-            </section>
-            <section class="sec2">
-                <img src="estoqueoficina.png" id="imagemestoque">
-                <img src="corredorestoque.png" class="imgcorredor">
-                <h1 class="txtproduto">Contamos com profissionais qualificados para melhor atendê-los
-                <p>Uma ampla variedade de peças de marcas consagradas no mercado</p></h1>
-
-            </section>
-  
- 
- 
- 
+        <div class="search">
+            <label for="searchbar">&#128269;</label>
+            <input class="input__search" type="search" name="searchbar" id="search">
+        </div>
+        <div class="products">
+            <ul class="products__list">
+                <li>Suspenção</li>
+                <li>Freios</li>
+                <li>Injeçao Eletronica</li>
+                <li>Eletrica</li>
+                <li>Baterias</li>
+            </ul>
+        </div>
  
         </main>
         <footer>    
